--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+obj/Debug/net8.0/PolandMod.AssemblyInfo.cs
+obj/Debug/net8.0/PolandMod.AssemblyInfoInputs.cache
